--- a/Fructika/Fructika.Android/Properties/AndroidManifest.xml
+++ b/Fructika/Fructika.Android/Properties/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="20" package="com.fructika.Fructika" android:installLocation="auto" android:versionName="2.0.0">
-	<uses-sdk android:minSdkVersion="21" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.fructika.Fructika" android:installLocation="auto" android:versionCode="20" android:versionName="2.0.0">
+	<uses-sdk android:minSdkVersion="22" android:targetSdkVersion="28" />
 	<application android:label="Fructika" android:icon="@mipmap/icon" android:theme="@android:style/Theme.Material"></application>
 </manifest>
