--- a/Fructika/Fructika.iOS/Fructika.iOS.csproj
+++ b/Fructika/Fructika.iOS/Fructika.iOS.csproj
@@ -113,10 +113,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
-      <Version>1.8.0</Version>
+      <Version>1.10.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Crashes">
-      <Version>1.8.0</Version>
+      <Version>1.10.0</Version>
     </PackageReference>
     <PackageReference Include="Plugin.Multilingual">
       <Version>1.1.6-beta</Version>
@@ -127,14 +127,14 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xam.Plugins.Settings">
-      <Version>3.1.1</Version>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>0.9.1-preview</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>3.1.0.637273</Version>
+      <Version>3.3.0.912540</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.TestCloud.Agent">
-      <Version>0.21.5</Version>
+      <Version>0.21.7</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
